--- a/mlrun/config.json
+++ b/mlrun/config.json
@@ -7,7 +7,7 @@
   },
   "logging": {
     "log_level": "DEBUG",
-    "format": "%(asctime)s %(name)s %(levelname)s %(message)s"
+    "format": "%(name)s %(levelname)s %(message)s"
   },
   "camera": {
     "id": 0,
