--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pip
 testresources
 setuptools
+wheel
+Cython; platform_machine == "arm64" or platform_machine == "aarch64"
 numpy==1.16.1; platform_machine == "arm64" or platform_machine == "aarch64"
 future==0.17.1; platform_machine == "arm64" or platform_machine == "aarch64"
 mock==3.0.5; platform_machine == "arm64" or platform_machine == "aarch64"
@@ -13,7 +15,7 @@ futures; platform_machine == "arm64" or platform_machine == "aarch64"
 protobuf; platform_machine == "arm64" or platform_machine == "aarch64"
 coloredlogs==10.0
 jsonschema==3.2.0
-tensorflow-gpu<2
+tensorflow-gpu<2; platform_machine == "x86_64"
 https://developer.download.nvidia.com/compute/redist/jp/v43/tensorflow-gpu/tensorflow_gpu-1.15.0+nv20.1-cp36-cp36m-linux_aarch64.whl; platform_machine == "arm64" or platform_machine == "aarch64"
 opencv-contrib-python==4.2.0.32; platform_machine == "x86_64"
 pynetworktables==2020.0.2
