--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,26 @@
-[tool.poetry]
+[project]
 name = "mlrun"
-version = "1.0.0"
-description = "An easy-to-use, modular object detection inferencing engine for embedded environments."
-authors = ["Nicholas Hubbard <hubbardn95@gmail.com>"]
-
-[tool.poetry.dependencies]
+version = "1.0.0a0"
+description = "An inference engine for object detection systems."
+authors = ["Nicholas Hubbard <nhubbard@users.noreply.github.com>"]
+license = "GPLv2"
+readme = "README.rst"
 python = "^3.6"
-numpy = "1.18.1"
-coloredlogs = "14.0"
-pynetworktables = "2020.0.3"
-pyzmq = "19.0.0"
-tensorflow-gpu = "2.1.0"
-tflite-runtime = { url = "https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp36-cp36m-linux_x86_64.whl", markers = "platform_machine == 'x86_64'" }
-opencv-python = "4.2.0.32"
-typing-extensions = "^3.7.4"
+homepage = "https://github.com/Robocubs/MLRun"
+repository = "https://github.com/Robocubs/MLRun"
+documentation = "work in progress"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9"
+]
+keywords = ["ai", "machine learning", "object detection", "first robotics"]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["wheel>=0.34.0", "setuptools>=40.8.0", "pip>=20.0.0", "testresources>=2.0.0", "toml>=0.10.0"]
+build-backend = "setuptools.build_meta"
